# Yojin

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker-setup.sh  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: architect.md
.claude/commands/: codex-fix-pr.md  codex-investigate.md  codex-refactor.md  codex-test.md  (+4 more)
.codex/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit  pre-commit.bak  pre-push
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
docker/: nginx.conf  refresh-token.sh
docs/: ai-provider-auth-comparison.md  overview-portfolio-value-pnl-audit.md  portfolio-data-analysis.md
plans/: architecture.md  data-sources.md  react-app-workspace.md
scripts/: postinstall-desktop.mjs  verify-release.mjs
skills/: concentration-rebalancer.json  drawdown-protector.json  earnings-momentum-scalper.json
src/: composition.ts  entry.ts  paths.ts  scheduler.ts
test/: brain.test.ts  claude-oauth.test.ts  composition.test.ts  config.test.ts  e2e-chat-flow.test.ts  e2e-process-insights.test.ts  e2e-signal-assessment.test.ts  env.test.ts  gateway.test.ts  memory-store.test.ts  oauth-integration.ts  paths.test.ts  plugin-sdk.test.ts  provider.test.ts  redact.test.ts  registry.test.ts  scheduler.test.ts
(+844 files in other folders)
