[package]
name = "yojin-desktop"
version = "1.0.0-rc.2"
description = "Yojin desktop tray app"
authors = ["Yojin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "yojin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
log = "0.4"
env_logger = "0.11"
